--- a/cf/i18n/resources/it-it.all.json
+++ b/cf/i18n/resources/it-it.all.json
@@ -4692,6 +4692,10 @@
     "translation": "Richiama le regole per tutti i gruppi di sicurezza associati allo spazio"
   },
   {
+    "id": "Retrieving logs for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}...",
+    "translation": ""
+  },
+  {
     "id": "Retrieving status of all flagged features as {{.Username}}...",
     "translation": "Richiamo dello stato di tutte le funzioni contrassegnate come {{.Username}} in corso..."
   },
